--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ aiohttp==3.6.2
 botbuilder-integration-aiohttp>=4.11.0
 botbuilder-dialogs>=4.11.0
 botbuilder-ai>=4.11.0
-
+azure-cognitiveservices-vision-face
+Pillow
